<resources>
    <string name="app_name">Rappi Movie Database API</string>
  <string name="popular_movies">Popular Movies</string>
  <string name="top_rated_movies">Top Rated Movies</string>
  <string name="upcoming_movies">Upcoming Movies</string>
  <string name="rating">Rating</string>
  <string name="release_date">Release Date:</string>
  <string name="overview">Overview</string>
  <string name="popularity">Popularity:</string>
  <string name="trailers_and_teasers">Trailers and Teasers</string>
</resources>
