<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
  <data>
    <variable name="movie"
              type="com.josancamon19.rappimoviedatabaseapi.data.models.Movie"/>
  </data>

  <LinearLayout
      android:id="@+id/details_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:elevation="4dp"
        android:elevation="4dp"
        android:id="@+id/appBarLayout" tools:targetApi="lollipop">

      <androidx.appcompat.widget.Toolbar
          android:id="@+id/toolbar"
          android:elevation="4dp"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          app:layout_scrollFlags="enterAlways|scroll">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
          <ImageView
              android:id="@+id/arrow_back"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:src="@drawable/ic_arrow_back"
          />
          <TextView
              tools:text="Details Dark Phoenix"
              android:text="@{`Details ` + movie.title}"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/title"
              android:textAppearance="@style/TextAppearance.AppCompat.Title"
              android:textSize="18sp"
              android:textColor="@android:color/white"
              android:layout_marginStart="16dp"/>
        </LinearLayout>
      </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="280dp"
            tools:srcCompat="@drawable/dark_phoenix_poster"
            android:id="@+id/iv_poster_detail"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            posterPath="@{movie.posterPath}"
            android:scaleType="centerCrop"
            android:contentDescription="@null"
            app:layout_constraintTop_toTopOf="parent"/>
        <com.greenfrvr.hashtagview.HashtagView
            android:id="@+id/hashtags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:rowGravity="left"
            app:tagTextGravity="left"
            app:tagBackground="@color/colorAccent"
            app:tagTextColor="@android:color/white"
            app:tagPaddingRight="16dp"
            app:tagPaddingLeft="16dp"
            android:gravity="start"
            app:tagMargin="4dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster_detail"
            app:layout_constraintStart_toStartOf="@+id/iv_poster_detail"
            android:layout_marginTop="16dp"/>
        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialRatingBar.RatingBar"
            app:mrb_progressTint="@color/colorPrimary"
            android:maxHeight="16dp"
            android:maxWidth="32dp"
            android:rating="@{((float)movie.voteAverage)/2}"
            app:mrb_secondaryProgressTint="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"/>
        <TextView
            tools:text="The X-Men face their most formidable and powerful foe when one of their own, Jean Grey, starts to spiral out of control. During a rescue mission in outer space, Jean is nearly killed when she's hit by a mysterious cosmic force. Once she returns home, this force not only makes her infinitely more powerful, but far more unstable. The X-Men must now band together to save her soul and battle aliens that want to use Grey's new abilities to rule the galaxy."
            android:text="@{movie.overview}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_overview_detail"
            app:layout_constraintStart_toStartOf="@+id/iv_poster_detail"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
        />
        <TextView
            android:text="@string/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/hashtags"
            app:layout_constraintStart_toStartOf="@+id/iv_poster_detail"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
        <TextView
            android:text="@{`From `+ String.valueOf(movie.voteCount) + ` total votes`}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            tools:text="From 654 total votes"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:text="@string/popularity"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:text="@{String.valueOf(movie.popularity)}"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginStart="16dp" tools:text="279.446"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"/>
        <TextView
            android:text="@string/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:text="@{movie.releaseDate}"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            android:layout_marginStart="8dp"
            tools:text="November 11 of 2012"/>
        <TextView
            android:text="@string/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

        <!--<androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_videos"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_detail"
            app:layout_constraintStart_toStartOf="@+id/tv_overview_detail"
            app:layout_constraintEnd_toEndOf="@+id/tv_overview_detail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:scrollbars="none"
            android:layout_marginBottom="24dp"/>-->
        <TextView
            android:text="@string/trailers_and_teasers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/videosTitle"
            app:layout_constraintStart_toStartOf="@+id/tv_overview_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_detail"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:visibility="gone"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:id="@+id/videos_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/videosTitle"
            app:layout_constraintStart_toStartOf="@+id/videosTitle"
            app:layout_constraintEnd_toEndOf="@+id/videosTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"/>

      </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

  </LinearLayout>
</layout>